# embedding-inference-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: locustfile.py  run_benchmarks.py
frontend/: package-lock.json
frontend/src/app/: api.ts  demoData.ts  globals.css  layout.tsx  page.tsx  types.ts  utils.ts
frontend/src/app/components/: ArchitectureDiagram.tsx  BenchmarkChart.tsx  EmbeddingGraph.tsx  EmbeddingHeatmap.tsx  HeroVisual.tsx  LatencyBadge.tsx  MetricsPanel.tsx  SimilarityMatrix.tsx  index.ts
frontend/src/app/hooks/: useReveal.ts
server/: __init__.py  batcher.py  cache.py  config.py  embedding.py  main.py  metrics.py  models.py
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_metrics.py  test_models.py
