[project]
name = "embedding-inference-server"
version = "1.0.0"
description = "Production-style embedding inference server with async batching and Redis caching"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Steven Bui", email = "sbui056@gmail.com"}]
keywords = ["embedding", "inference", "fastapi", "redis", "sentence-transformers", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sentence-transformers>=3.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "locust>=2.31.0",
    "fakeredis>=2.25.0",
]

[project.urls]
Repository = "https://github.com/sbui056/embedding-inference-server"
Documentation = "https://github.com/sbui056/embedding-inference-server#readme"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
